bugfix:text-overlow:ellipsis;white-space:nowrap;overflow:hidden styles are added to profile__description and profile__name class

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -9,6 +9,9 @@
   text-align: center;
 
   color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 900px) {
